kubernetes/apps/youtube-dl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-dl
  labels:
    app: youtube-dl
spec:
  selector:
    matchLabels:
      app: youtube-dl
  template:
    metadata:
      labels:
        app: youtube-dl
    spec:
      containers:
        - name: app
          image: nbr23/youtube-dl-server:e6fc6e49a8a20b46b6d4b8745d834fdd5381236a-1790903965-yt-dlp # {"$imagepolicy": "apps:youtube-dl-server"}
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app_config/
              name: config
              readOnly: true
            - mountPath: /youtube-dl
              name: video
              subPath: import/youtube-dl
            - mountPath: /db
              name: db
      volumes:
        - name: config
          configMap:
            name: youtube-dl
        - name: db
          persistentVolumeClaim:
            claimName: youtube-dl-pvc
        - name: video
          persistentVolumeClaim:
            claimName: video-pvc
      # I could add a PVC to persist the logs & history db, but it doesn't seem important
