kubernetes/apps/youtube-dl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-dl
spec:
  selector:
    app: youtube-dl
  ports:
    - protocol: TCP
      port: 8080
