kubernetes/apps/youtube-dl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-dl
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - youtube.immortalkeep.com
      secretName: youtube-ingress-tls
  rules:
    - host: youtube.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: youtube-dl
                port:
                  number: 8080
